syntax = "proto3";
package de.hfu.keyvaluestore.protocol.generated;

service KeyValueStoreService {
  rpc Get (GetCommand) returns (GetCompleted) {}
  rpc Put (PutCommand) returns (PutCompleted) {}
  rpc QueryShardingState (QueryShardingStateMessage) returns (ShardingState) {}
}

message GetCommand {
  string key = 1;
}

message GetCompleted {
  string key = 1;
  bool found = 2;
  map<string, string> value = 3;
}

message PutCommand {
  string key = 1;
  map<string, string> value = 2;
  bool persist = 3;
}

message PutCompleted {
  string key = 1;
}

message QueryShardingStateMessage {}

message ShardingState {
  repeated ShardingNode nodes = 1;
}

message ShardingNode {
  string name = 1;
  string host = 2;
  uint32 port = 3;
  repeated string shards = 4;
}